<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="367dp"
        android:layout_height="61dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="19dp"
        android:layout_marginTop="40dp"
        android:text="@string/txtTitle"
        android:textColor="#674ea7"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtWidth"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:ems="10"
        android:hint="@string/txtWidth"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtLength"
        android:layout_width="228dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:ems="10"
        android:hint="@string/txtLength"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="30sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="138dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="89dp"
        android:layout_marginBottom="222dp">

        <RadioButton
            android:id="@+id/rad12Inches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:checked="true"
            android:text="@string/rad12Inches"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rad18Inches"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/rad18Inches"
            android:textSize="20sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="487dp"
        android:layout_height="42dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="58dp"
        android:textAlignment="center"
        android:textColor="#674ea7"
        android:textSize="24sp"
        tools:text="Output from calculation" />

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="226dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="126dp"
        android:text="@string/btnArea"
        android:textSize="25sp" />

</RelativeLayout>